Парсинг трофеев игрока/тренера
