# main.go
@@ -32,6 +32,7 @@ func main() {
 	r.GET("/team_compositions", TeamCompositionsController)
 	r.GET("/player_detail", PlayerDetailController)
 	r.GET("/team_detail", TeamDetailController)
+	r.GET("/trophies", TrophiesController)
 
 	initSwagger(r)
 
